[package]
name = "advent_of_code_2015_rust"
version = "0.1.0"
authors = ["Christopher Luu <nuudles@gmail.com>"]
edition = "2018"

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
md5 = "0.7.0"
regex = "1.4.2"
lazy_static = "1.4.0"
cached = "0.22.0"
pathfinding = "3.0.5"
itertools = "0.10.3"
serde_json = "1.0.59"